Don't change the previous focus by calling focus{First,Last}Child

This makes sure focus chain behave as expected when pressing Tab from
menu items in the sidebar, and pressing Backtab from the module view.

BUG: 404065
FIXED-IN: 6.0